@@ -1,3 +1,7 @@
+2006-09-08 Jens Tkotz <jens@peino.de> 1.6-svn-b10
+
+ * Fix: Added additional --keyword in xgettext calls to support gettext 0.15
+
 2006-09-08 Jens Tkotz <jens@peino.de> 1.6-svn-b9
 
  * Fix: removed the $break param from the calls of makeSectionTabs() in setup ;)
